--- a/main.ipynb
+++ b/main.ipynb
@@ -138,7 +138,7 @@
    "metadata": {},
    "source": [
     "<div style=\"overflow: auto;\">\n",
-    "    <img src=\"./images/components/processor.jpg\" alt=\"Processor\" style=\"float: right; margin-right: 300px; width: 300px; height: 200px\">\n",
+    "    <img src=\"./images/Components/processor.jpg\" alt=\"Processor\" style=\"float: right; margin-right: 300px; width: 300px; height: 200px\">\n",
     "    <div style=\"text-align: center;\">\n",
     "        <h3 style=\"text-align: justify; margin-top: 80px; margin-left: 40px\">We define the function for generating Processor data.</h3>\n",
     "    </div>\n",
@@ -182,7 +182,7 @@
    "metadata": {},
    "source": [
     "<div style=\"overflow: auto;\">\n",
-    "    <img src=\"./images/components/motherboard.jpg\" alt=\"Motherboard\" style=\"float: right; margin-right: 300px; width: 300px; height: 200px\">\n",
+    "    <img src=\"./images/Components/motherboard.jpg\" alt=\"Motherboard\" style=\"float: right; margin-right: 300px; width: 300px; height: 200px\">\n",
     "    <div style=\"text-align: center;\">\n",
     "        <h3 style=\"text-align: justify; margin-top: 80px; margin-left: 40px\">We define the function for generating Motherboard data.</h3>\n",
     "    </div>\n",
@@ -224,7 +224,7 @@
    "metadata": {},
    "source": [
     "<div style=\"overflow: auto;\">\n",
-    "    <img src=\"./images/components/ram.jpg\" alt=\"RAM\" style=\"float: right; margin-right: 300px; width: 300px; height: 200px\">\n",
+    "    <img src=\"./images/Components/ram.jpg\" alt=\"RAM\" style=\"float: right; margin-right: 300px; width: 300px; height: 200px\">\n",
     "    <div style=\"text-align: center;\">\n",
     "        <h3 style=\"text-align: justify; margin-top: 80px; margin-left: 40px\">We define the function for generating RAM data.</h3>\n",
     "    </div>\n",
@@ -262,7 +262,7 @@
    "metadata": {},
    "source": [
     "<div style=\"overflow: auto;\">\n",
-    "    <img src=\"./images/components/hdd.jpg\" alt=\"HDD\" style=\"float: right; margin-right: 300px; width: 300px; height: 200px\">\n",
+    "    <img src=\"./images/Components/hdd.jpg\" alt=\"HDD\" style=\"float: right; margin-right: 300px; width: 300px; height: 200px\">\n",
     "    <div style=\"text-align: center;\">\n",
     "        <h3 style=\"text-align: justify; margin-top: 80px; margin-left: 40px\">We define the function for generating Hard Disk data.</h3>\n",
     "    </div>\n",
@@ -297,7 +297,7 @@
    "metadata": {},
    "source": [
     "<div style=\"overflow: auto;\">\n",
-    "    <img src=\"./images/components/ssd.jpg\" alt=\"SSD\" style=\"float: right; margin-right: 300px; width: 300px; height: 200px\">\n",
+    "    <img src=\"./images/Components/ssd.jpg\" alt=\"SSD\" style=\"float: right; margin-right: 300px; width: 300px; height: 200px\">\n",
     "    <div style=\"text-align: center;\">\n",
     "        <h3 style=\"text-align: justify; margin-top: 80px; margin-left: 40px\">We define the function for generating SSD data.</h3>\n",
     "    </div>\n",
@@ -333,7 +333,7 @@
    "metadata": {},
    "source": [
     "<div style=\"overflow: auto;\">\n",
-    "    <img src=\"./images/components/powersupply.jpg\" alt=\"Power Supply\" style=\"float: right; margin-right: 300px; width: 300px; height: 200px\">\n",
+    "    <img src=\"./images/Components/powersupply.jpg\" alt=\"Power Supply\" style=\"float: right; margin-right: 300px; width: 300px; height: 200px\">\n",
     "    <div style=\"text-align: center;\">\n",
     "        <h3 style=\"text-align: justify; margin-top: 80px; margin-left: 40px\">We define the function for generating Power Supply data.</h3>\n",
     "    </div>\n",
@@ -365,7 +365,7 @@
    "metadata": {},
    "source": [
     "<div style=\"overflow: auto;\">\n",
-    "    <img src=\"./images/components/video_card.jpg\" alt=\"Graphics Card\" style=\"float: right; margin-right: 300px; width: 300px; height: 200px\">\n",
+    "    <img src=\"./images/Components/video_card.jpg\" alt=\"Graphics Card\" style=\"float: right; margin-right: 300px; width: 300px; height: 200px\">\n",
     "    <div style=\"text-align: center;\">\n",
     "        <h3 style=\"text-align: justify; margin-top: 80px; margin-left: 40px\">We define the function for generating Graphics Card data.</h3>\n",
     "    </div>\n",
